--- a/package.json
+++ b/package.json
@@ -7,5 +7,12 @@
   "scripts": {
     "start:client": "npm run -w @expenses/frontend start",
     "start:server": "npm run -w @expenses/backend start"
+  },
+  "dependencies": {
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.23",
+    "@types/react": "^17.0.43",
+    "@types/react-dom": "^17.0.14",
+    "typescript": "^4.6.3"
   }
 }
