--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "start:server": "npm run -w @expenses/backend start"
   },
   "dependencies": {
-    "@types/jest": "^27.4.1",
-    "@types/react": "^17.0.43",
-    "@types/react-dom": "^17.0.14"
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.4.1",
     "@types/node": "^17.0.23",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "@types/react-router-dom": "^5.3.3",
     "typescript": "^4.6.3"
   }
 }
