--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "start:server": "npm run -w @expenses/backend start"
   },
   "dependencies": {
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "source-map-loader": "^3.0.1",
+    "ts-loader": "^9.2.8"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
@@ -18,6 +20,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/react-router-dom": "^5.3.3",
+    "@types/styled-components": "^5.1.25",
     "typescript": "^4.6.3"
   }
 }
