--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
     "typescript": "^4.6.3"
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.25"
   }
 }
