--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^17.0.23",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
+    "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
   },
   "devDependencies": {
