--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon src/app.js",
+    "start": "nodemon src/app.ts",
     "test": "jest"
   },
   "repository": {
@@ -23,7 +23,8 @@
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.3",
-    "nodemailer": "^6.7.2"
+    "nodemailer": "^6.7.2",
+    "ts-node": "^10.7.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.16.11",
