--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "typescript": "^4.6.3"
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.25"
+    "@types/styled-components": "^5.1.25",
+    "nodemon": "^2.0.15"
   }
 }
