--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@types/jest": "^27.4.1",
+    "@types/mongodb": "^4.0.7",
     "@types/node": "^17.0.23",
+    "@types/nodemailer": "^6.4.4",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
     "ts-node": "^10.7.0",
