--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -54,9 +54,6 @@
     "prop-types": "^15.8.1"
   },
   "engines": {
-    "node": ">=14.0.0"
-  },
-  "engines": {
-    "node": "17.1.0",
+    "node": "17.1.0"
   }
 }
