--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -25,7 +25,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.3",
     "nodemailer": "^6.7.2",
-    "ts-node": "^10.7.0"
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.3"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.16.11",
