--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@babel/preset-env": "^7.16.11",
+    "@types/express": "^4.17.13",
     "dotenv": "^16.0.0",
     "eslint": "^8.9.0",
     "jest": "^27.5.1",
